--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
@@ -116,6 +116,7 @@
     <ClInclude Include="src\ast\ast_node.h" />
     <ClInclude Include="src\ast\expr.h" />
     <ClInclude Include="src\common.h" />
+    <ClInclude Include="src\debug\unit_test.h" />
     <ClInclude Include="src\parse\expr_parselet.h" />
     <ClInclude Include="src\parse\prec_parser.h" />
     <ClInclude Include="src\parse\infix_parselet.h" />
@@ -127,6 +128,8 @@
     <ClInclude Include="src\parse\token.h" />
     <ClInclude Include="src\parse\yexpr_parser.h" />
     <ClInclude Include="src\parse\ylexer.h" />
+    <ClInclude Include="src\utility\base_of.h" />
+    <ClInclude Include="src\utility\double_dispatcher.h" />
     <ClInclude Include="src\utility\iterator.h" />
     <ClInclude Include="src\utility\map_ext.h" />
     <ClInclude Include="src\utility\optional.h" />
@@ -140,6 +143,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\ast\ast_node.cpp" />
     <ClCompile Include="src\ast\expr.cpp" />
+    <ClCompile Include="src\debug\unit_test.cpp" />
     <ClCompile Include="src\parse\expr_parselet.cpp" />
     <ClCompile Include="src\parse\lexer.cpp" />
     <ClCompile Include="src\parse\parser.cpp" />
