--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj.filters
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="src\utility\base_of.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\debug\expr_prec_printer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -129,6 +132,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\debug\unit_test.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\debug\expr_prec_printer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
