--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj.filters
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="src\debug\expr_prec_printer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\unit_testing\expr_unit_test.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -135,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\debug\expr_prec_printer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\unit_testing\expr_unit_test.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
