--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
@@ -114,8 +114,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\ast\ast_node.h" />
-    <ClInclude Include="src\ast\ast_tag.h" />
     <ClInclude Include="src\ast\expr.h" />
+    <ClInclude Include="src\ast\type_desc.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\debug\expr_prec_printer.h" />
     <ClInclude Include="src\debug\unit_test.h" />
@@ -145,6 +145,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\ast\ast_node.cpp" />
     <ClCompile Include="src\ast\expr.cpp" />
+    <ClCompile Include="src\ast\type_desc.cpp" />
     <ClCompile Include="src\debug\expr_prec_printer.cpp" />
     <ClCompile Include="src\debug\unit_test.cpp" />
     <ClCompile Include="src\parse\lexer.cpp" />
