--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
@@ -132,9 +132,13 @@
     <ClInclude Include="src\parse\yparser.h" />
     <ClInclude Include="src\parse\ylexer.h" />
     <ClInclude Include="src\semantics\expr_checker.h" />
+    <ClInclude Include="src\semantics\scope.h" />
     <ClInclude Include="src\semantics\semantic_checker.h" />
     <ClInclude Include="src\semantics\stmt_checker.h" />
+    <ClInclude Include="src\semantics\symbol.h" />
+    <ClInclude Include="src\semantics\symbol_table.h" />
     <ClInclude Include="src\semantics\type_checker.h" />
+    <ClInclude Include="src\semantics\type_symbol.h" />
     <ClInclude Include="src\unit_testing\expr_unit_test.h" />
     <ClInclude Include="src\utility\base_of.h" />
     <ClInclude Include="src\utility\double_dispatcher.h" />
@@ -164,9 +168,13 @@
     <ClCompile Include="src\parse\yparser.cpp" />
     <ClCompile Include="src\parse\ylexer.cpp" />
     <ClCompile Include="src\semantics\expr_checker.cpp" />
+    <ClCompile Include="src\semantics\scope.cpp" />
     <ClCompile Include="src\semantics\semantic_checker.cpp" />
     <ClCompile Include="src\semantics\stmt_checker.cpp" />
+    <ClCompile Include="src\semantics\symbol.cpp" />
+    <ClCompile Include="src\semantics\symbol_table.cpp" />
     <ClCompile Include="src\semantics\type_checker.cpp" />
+    <ClCompile Include="src\semantics\type_symbol.cpp" />
     <ClCompile Include="src\unit_testing\expr_unit_test.cpp" />
     <ClCompile Include="src\utility\optional.cpp" />
   </ItemGroup>
