--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="src\ir\ir_module.h" />
     <ClInclude Include="src\ir\ir_opcode.h" />
     <ClInclude Include="src\ir\ir_printer.h" />
+    <ClInclude Include="src\ir\ir_type.h" />
     <ClInclude Include="src\parse\prec_parser.h" />
     <ClInclude Include="src\parse\infix_parselet.h" />
     <ClInclude Include="src\parse\lexer.h" />
@@ -175,6 +176,7 @@
     <ClCompile Include="src\ir\ir_instr.cpp" />
     <ClCompile Include="src\ir\ir_module.cpp" />
     <ClCompile Include="src\ir\ir_printer.cpp" />
+    <ClCompile Include="src\ir\ir_type.cpp" />
     <ClCompile Include="src\parse\lexer.cpp" />
     <ClCompile Include="src\parse\parser.cpp" />
     <ClCompile Include="src\parse\position.cpp" />
