Started compiler (to IR)

--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj
@@ -118,10 +118,14 @@
     <ClInclude Include="src\ast\pattern.h" />
     <ClInclude Include="src\ast\stmt.h" />
     <ClInclude Include="src\ast\type_desc.h" />
+    <ClInclude Include="src\ast_meta\func_meta.h" />
+    <ClInclude Include="src\ast_meta\let_meta.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\debug\expr_prec_printer.h" />
     <ClInclude Include="src\debug\unit_test.h" />
     <ClInclude Include="src\ir\ir_basic_block.h" />
+    <ClInclude Include="src\ir\ir_builder.h" />
+    <ClInclude Include="src\ir\ir_compiler.h" />
     <ClInclude Include="src\ir\ir_environment.h" />
     <ClInclude Include="src\ir\ir_function.h" />
     <ClInclude Include="src\ir\ir_instr.h" />
@@ -172,9 +176,13 @@
     <ClCompile Include="src\ast\pattern.cpp" />
     <ClCompile Include="src\ast\stmt.cpp" />
     <ClCompile Include="src\ast\type_desc.cpp" />
+    <ClCompile Include="src\ast_meta\func_meta.cpp" />
+    <ClCompile Include="src\ast_meta\let_meta.cpp" />
     <ClCompile Include="src\debug\expr_prec_printer.cpp" />
     <ClCompile Include="src\debug\unit_test.cpp" />
     <ClCompile Include="src\ir\ir_basic_block.cpp" />
+    <ClCompile Include="src\ir\ir_builder.cpp" />
+    <ClCompile Include="src\ir\ir_compiler.cpp" />
     <ClCompile Include="src\ir\ir_environment.cpp" />
     <ClCompile Include="src\ir\ir_function.cpp" />
     <ClCompile Include="src\ir\ir_instr.cpp" />
