--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj.filters
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj.filters
@@ -78,9 +78,6 @@
     <ClInclude Include="src\debug\unit_test.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\utility\double_dispatcher.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\utility\base_of.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -166,6 +163,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\ir\ir_builder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\utility\visitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
