--- a/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj.filters
+++ b/YoakkeCompilerBranch/YoakkeCompilerBranch.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="src\utility\visitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\ast\node_tag.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -264,6 +267,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\ir\ir_builder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ast\node_tag.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
