--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
@@ -72,6 +72,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin\intermediates\$(Configuration)\</IntDir>
+    <IncludePath>$(ProjectDir)dependencies\mach7\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -117,9 +118,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\lexing\position.cpp" />
+    <ClCompile Include="src\lexing\token.cpp" />
+    <ClCompile Include="src\lexing\ylexer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h" />
+    <ClInclude Include="src\lexing\lexer.h" />
+    <ClInclude Include="src\lexing\position.h" />
+    <ClInclude Include="src\lexing\token.h" />
+    <ClInclude Include="src\lexing\ylexer.h" />
+    <ClInclude Include="src\lexing\ytoken_t.h" />
+    <ClInclude Include="src\parsing\parser.h" />
     <ClInclude Include="src\utility\opt_map.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
