--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ YoakkeCompiler/src/Parsing/ExprParser.cpp~RFcdfbad9.TMP
 *.ipch
 *.db-wal
 *.ipch
+*.ipch
+.vs/YoakkeCompiler/v15/ipch/AutoPCH/YOAKKECOMPILERBRANCH-176b7882/MAIN-597b1971/MAIN.ipch
