--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
@@ -119,8 +119,8 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\lexing\position.cpp" />
-    <ClCompile Include="src\lexing\token.cpp" />
     <ClCompile Include="src\lexing\ylexer.cpp" />
+    <ClCompile Include="src\parsing\parser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h" />
@@ -129,7 +129,9 @@
     <ClInclude Include="src\lexing\token.h" />
     <ClInclude Include="src\lexing\ylexer.h" />
     <ClInclude Include="src\lexing\ytoken_t.h" />
+    <ClInclude Include="src\parsing\parselet.h" />
     <ClInclude Include="src\parsing\parser.h" />
+    <ClInclude Include="src\parsing\prec_parser.h" />
     <ClInclude Include="src\utility\opt_map.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
