--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj.filters
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="src\parsing\parse_error.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\yerror.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\parsing\parse_error.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\yerror.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
