--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
@@ -72,7 +72,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin\intermediates\$(Configuration)\</IntDir>
-    <IncludePath>$(ProjectDir)dependencies\mach7\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)dependencies\mach7\include;$(ProjectDir)dependencies\xtl\include;$(ProjectDir)dependencies\cppft\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -97,6 +97,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>WIN32;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -120,6 +121,8 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\ast\expr.cpp" />
     <ClCompile Include="src\ast\node.cpp" />
+    <ClCompile Include="src\debug\debug_printer.cpp" />
+    <ClCompile Include="src\lexing\lex_error.cpp" />
     <ClCompile Include="src\lexing\position.cpp" />
     <ClCompile Include="src\lexing\ylexer.cpp" />
     <ClCompile Include="src\parsing\parser.cpp" />
@@ -133,7 +136,9 @@
     <ClInclude Include="src\ast\expr.h" />
     <ClInclude Include="src\ast\node.h" />
     <ClInclude Include="src\common.h" />
+    <ClInclude Include="src\debug\debug_printer.h" />
     <ClInclude Include="src\lexing\lexer.h" />
+    <ClInclude Include="src\lexing\lex_error.h" />
     <ClInclude Include="src\lexing\position.h" />
     <ClInclude Include="src\lexing\token.h" />
     <ClInclude Include="src\lexing\ylexer.h" />
