--- a/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
+++ b/YoakkeCompilerBranch2/YoakkeCompilerBranch2.vcxproj
@@ -121,6 +121,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\ast\expr.cpp" />
     <ClCompile Include="src\ast\node.cpp" />
+    <ClCompile Include="src\ast\pattern.cpp" />
     <ClCompile Include="src\debug\debug_printer.cpp" />
     <ClCompile Include="src\lexing\lex_error.cpp" />
     <ClCompile Include="src\lexing\position.cpp" />
@@ -135,6 +136,7 @@
   <ItemGroup>
     <ClInclude Include="src\ast\expr.h" />
     <ClInclude Include="src\ast\node.h" />
+    <ClInclude Include="src\ast\pattern.h" />
     <ClInclude Include="src\common.h" />
     <ClInclude Include="src\debug\debug_printer.h" />
     <ClInclude Include="src\lexing\lexer.h" />
